Sat, Jan 28, 2023, 3:29 PM +07:00

--- a/labs/trivia/index.html
+++ b/labs/trivia/index.html
@@ -12,7 +12,7 @@
                 let button = event.target;
 
                 // Check if the element's inner HTML matches expected answer
-                if (button.innerHTML == '1 person per 6 sheep') {
+                if (button.innerHTML == 'Puncak Jaya') {
                     button.style.backgroundColor = 'Green';
                     button.parentElement.querySelector('.feedback').innerHTML = 'Correct!';
                 }
@@ -31,7 +31,7 @@
                 let input = button.parentElement.querySelector('input');
 
                 // Check for correct answer
-                if (input.value === 'Switzerland') {
+                if (input.value === 'Jawa') {
                     input.style.backgroundColor = 'Green';
                     input.parentElement.querySelector('.feedback').innerHTML = 'Correct!';
                 }
@@ -51,19 +51,19 @@
             <div class="section">
                 <h2>Part 1: Multiple Choice </h2>
                 <hr>
-                <h3>What is the approximate ratio of people to sheep in New Zealand?</h3>
-                <button onclick="checkMultiChoice(event)">6 people per 1 sheep</button>
-                <button onclick="checkMultiChoice(event)">3 people per 1 sheep</button>
-                <button onclick="checkMultiChoice(event)">1 person per 1 sheep</button>
-                <button onclick="checkMultiChoice(event)">1 person per 3 sheep</button>
-                <button onclick="checkMultiChoice(event)">1 person per 6 sheep</button>
+                <h3>What is the highest summit in Indonesia>?</h3>
+                <button onclick="checkMultiChoice(event)">Puncak Jaya</button>
+                <button onclick="checkMultiChoice(event)">Mahameru</button>
+                <button onclick="checkMultiChoice(event)">Cartenz Pyramid</button>
+                <button onclick="checkMultiChoice(event)">Gunung Salak</button>
+                <button onclick="checkMultiChoice(event)">Gunung Agung</button>
                 <p class="feedback"></p>
             </div>
 
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
-                <h3>In which country is it illegal to own only one guinea pig, as a lone guinea pig might get lonely?</h3>
+                <h3>Di pulau mana gunung Semeru berada??</h3>
                 <input type="text"></input>
                 <button onclick="checkFreeResponse(event)">Check Answer</button>
                 <p class="feedback"></p>
