--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -4,12 +4,13 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
         <link href="styles.css" rel="stylesheet">
         <title>Bright Camps - Home</title>
     </head>
     <body>
         <div class="container-fluid p-5">
-            
+
         </div>
     </body>
 </html>
