--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="container-fluid p-5">
-            <h1 style="font-family: 'Caveat'">Bright Camps</h1>
+            <h1 style="font-family: 'Caveat'" class="bg-dark text-white">Bright Camps</h1>
         </div>
     </body>
 </html>
