Sat, Jan 28, 2023, 9:04 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -9,8 +9,8 @@
         <title>Bright Camps - Home</title>
     </head>
     <body>
-        <div class="container-fluid p-5">
-            <h1 style="font-family: 'Caveat'" class="bg-dark text-white">Bright Camps</h1>
+        <div class="container-fluid p-5 text-white bg-dark text-center">
+            <h1 style="font-family: 'Caveat'" class>Bright Camps</h1>
         </div>
     </body>
 </html>
