Sat, Jan 28, 2023, 9:06 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -11,6 +11,7 @@
     <body>
         <div class="container-fluid p-5 text-white bg-dark text-center">
             <h1 style="font-family: 'Caveat'" class>Bright Camps</h1>
+            <h3>Brighten up your future with us!</h3>
         </div>
     </body>
 </html>
