Sat, Jan 28, 2023, 9:08 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -9,9 +9,9 @@
         <title>Bright Camps - Home</title>
     </head>
     <body>
-        <div class="container-fluid p-5 text-white bg-dark text-center">
-            <h1 style="font-family: 'Caveat'" class>Bright Camps</h1>
-            <h3>Brighten up your future with us!</h3>
+        <div class="container-fluid p-5 text-white bg-dark text-center fs-1">
+            <h1 style="font-family: 'Caveat'" class>B r i g h t    C a m p s</h1>
+            <h6>Brighten up your future with us!</h6>
         </div>
     </body>
 </html>
