--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -9,7 +9,7 @@
         <title>Bright Camps - Home</title>
     </head>
     <body>
-        <div class="container-fluid p-5 text-white bg-dark text-center fs-1">
+        <div class="container-fluid shadow-lg p-5 text-white bg-dark text-center fs-1">
             <h1 style="font-family: 'Caveat'" class>B r i g h t    C a m p s</h1>
             <h6>Brighten up your future with us!</h6>
         </div>
