Sat, Jan 28, 2023, 9:16 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -33,9 +33,12 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Courses</a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Link</a></li>
-                      <li><a class="dropdown-item" href="#">Another link</a></li>
-                      <li><a class="dropdown-item" href="#">A third link</a></li>
+                      <li><a class="dropdown-item" href="#">Roblox Curriculum</a></li>
+                      <li><a class="dropdown-item" href="#">Scratch Curriculum</a></li>
+                      <li><a class="dropdown-item" href="#">Minecraft Education Curriculum</a></li>
+                      <li><a class="dropdown-item" href="#">Front-end Web Development</a></li>
+                      <li><a class="dropdown-item" href="#">Back-end Web Development</a></li>
+                      <li><a class="dropdown-item" href="#">Data Science & Machine Learning</a></li>
                     </ul>
                   </li>
                 </ul>
