--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -6,6 +6,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
         <link href="styles.css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/687309d161.js" crossorigin="anonymous"></script>
         <title>Bright Camps - Home</title>
     </head>
     <body>
