--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Logo</a>
+              <a class="navbar-brand" href="#"><i class="fa-brands fa-font-awesome"></i></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
