Sat, Jan 28, 2023, 9:29 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -14,7 +14,7 @@
             <h1 style="font-family: 'Caveat'" class>B r i g h t    C a m p s</h1>
             <h6>Brighten up your future with us!</h6>
         </div>
-        <header class="p-3 text-bg-dark">
+        <header class="p-3 bg-dark">
             <div class="container">
               <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
