--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -14,7 +14,7 @@
             <h1 style="font-family: 'Caveat'" class>B r i g h t    C a m p s</h1>
             <h6>Brighten up your future with us!</h6>
         </div>
-        <header class="p-3 bg-dark">
+        <header class="p-3 text-bg-dark">
             <div class="container">
               <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -23,10 +23,10 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                   <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-                  <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                  <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                  <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                  <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">Features</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">Pricing</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
