Sat, Jan 28, 2023, 9:39 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -23,8 +23,8 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                   <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">Features</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">Pricing</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">Courses</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">Newsletters</a></li>
                   <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li>
                   <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
                 </ul>
