--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -40,7 +40,9 @@
               </div>
             </div>
           </header>
+
           <div class="b-example-divider"></div>
+
           <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
@@ -56,6 +58,10 @@
               </div>
             </div>
           </div>
+
+          <div class="b-example-divider"></div>
+
+          
 
     </body>
 </html>
