--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -14,7 +14,7 @@
             <h1 style="font-family: 'Caveat'" class>B r i g h t    C a m p s</h1>
             <h6>Brighten up your future with us!</h6>
         </div>
-        <header class="p-3 text-bg-dark">
+        <header class="p-3 text-bg-dark border-bottom">
             <div class="container">
               <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -72,10 +72,12 @@
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
               <div class="container px-5">
-                <img src="bootstrap-docs.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+                <img src="images/bootstrap-docs.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
               </div>
             </div>
           </div>
+
+          <div class="b-example-divider"></div>
 
     </body>
 </html>
