--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -78,9 +78,12 @@
           </div>
 
           <div class="b-example-divider"></div>
-          <h2 class="text-center">
-            Limited Offers!!
-          </h2>
+          <div class="p-4">
+            <h2 class="text-center">
+              Limited Offers!!
+            </h2>
+          </div>
+
           <div class="container">
             <div class="row">
               <div class="col-lg-4">
