Sat, Jan 28, 2023, 11:50 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -78,6 +78,7 @@
           </div>
 
           <div class="b-example-divider"></div>
+
           <div class="p-4">
             <h2 class="text-center">
               Limited Offers!!
@@ -117,7 +118,11 @@
                 </div>
               </div>
             </div>
+            <div class="spacing p-4"></div>
           </div>
+
+          <div class="b-example-divider"></div>
+          
 
     </body>
 </html>
