Sat, Jan 28, 2023, 11:52 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -122,7 +122,10 @@
           </div>
 
           <div class="b-example-divider"></div>
-          
+
+          <div class="container-fluid bg-dark text-white text-center">
+            
+          </div>
 
     </body>
 </html>
