Sat, Jan 28, 2023, 11:56 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -123,8 +123,11 @@
 
           <div class="b-example-divider"></div>
 
-          <div class="container-fluid bg-dark text-white text-center">
-            
+          <div class="container-fluid p-4 bg-dark text-white text-center">
+            <footer>
+              &copy; <em id="2023"></em>Listyanti Dewi Astuti
+              <p class="text-small">dewi@smkn12malang.sch.id</p>
+            </footer>
           </div>
 
     </body>
