--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -35,7 +35,8 @@
 
                 <div class="text-end">
                   <button type="button" class="btn btn-outline-dark me-2">Login</button>
-                  <button type="button" class="btn btn-warning">Sign-up</button>
+                  <a href="signup.html"><button type="button" class="btn btn-warning">Sign-up</button></a>
+
                 </div>
               </div>
             </div>
