--- a/problem-sets/homepage/signup.html
+++ b/problem-sets/homepage/signup.html
@@ -74,7 +74,7 @@
             </div>
           </div>
 
-          <div class="b-example-divider"></div>
+          <!-- <div class="b-example-divider"></div> -->
 
           <div class="container-fluid p-4 bg-dark text-white text-center">
             <footer>
