--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -34,7 +34,7 @@
                 </form>
 
                 <div class="text-end">
-                  <button type="button" class="btn btn-outline-dark me-2">Login</button>
+                  <a href="login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
                   <a href="signup.html"><button type="button" class="btn btn-warning">Sign-up</button></a>
 
                 </div>
@@ -122,7 +122,7 @@
             <div class="spacing p-4"></div>
           </div>
 
-          <div class="b-example-divider"></div>
+          <!-- <div class="b-example-divider"></div> -->
 
           <div class="container-fluid p-4 bg-dark text-white text-center">
             <footer>
