--- a/problem-sets/homepage/signup.html
+++ b/problem-sets/homepage/signup.html
@@ -34,7 +34,7 @@
                 </form>
 
                 <div class="text-end">
-                  <button type="button" class="btn btn-outline-dark me-2">Login</button>
+                    <a href="login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
                   <a href="signup.html"><button type="button" class="btn btn-warning">Sign-up</button></a>
                 </div>
               </div>
