Sun, Jan 29, 2023, 12:30 AM +07:00

--- a/problem-sets/homepage/newsletters.html
+++ b/problem-sets/homepage/newsletters.html
@@ -15,7 +15,32 @@
             <h6>Brighten up your future with us!</h6>
         </div>
 
+        <header class="p-3 text-bg-dark border-bottom">
+            <div class="container">
+              <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                  <span><i></i></span>
+                </a>
 
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                  <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">Courses</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">Newsletters</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
+                </ul>
+
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                  <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
+                </form>
+
+                <div class="text-end">
+                    <a href="login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
+                  <a href="signup.html"><button type="button" class="btn btn-warning">Sign-up</button></a>
+                </div>
+              </div>
+            </div>
+          </header>
         <div class="container px-4 py-5">
             <h2 class="pb-2 border-bottom">Features with title</h2>
 
@@ -81,7 +106,7 @@
 
                 <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
                   <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('unsplash-photo-1.jpg');">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('/images/unsplash-photo-1.jpg');">
                       <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -102,7 +127,7 @@
                   </div>
 
                   <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('unsplash-photo-2.jpg');">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('/images/unsplash-photo-2.jpg');">
                       <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple lines</h3>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -123,7 +148,7 @@
                   </div>
 
                   <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('unsplash-photo-3.jpg');">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('/images/unsplash-photo-3.jpg');">
                       <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                         <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h3>
                         <ul class="d-flex list-unstyled mt-auto">
