Sun, Jan 29, 2023, 10:33 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -10,21 +10,21 @@
         <title>Bright Camps - Home</title>
     </head>
     <body>
-        <div class="container-fluid shadow-lg p-5 text-white bg-dark text-center fs-1">
-            <h1 style="font-family: 'Caveat'" class>B r i g h t    C a m p s</h1>
-            <h6>Brighten up your future with us!</h6>
+        <div class="container-fluid shadow-lg p-5 text-white text-center fs-1 bg-img">
+            <h1 class="text-big" style="font-family: 'Caveat'" class>Listyanti Dewi Astuti</h1>
+            <h6>Software & Game Development Teacher</h6>
         </div>
-        <header class="p-3 text-bg-dark border-bottom">
+        <header class="p-3 text-bg-dark border-bottom bg-light">
             <div class="container">
               <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                  <span><i></i></span>
+                <a href="/index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+
                 </a>
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                  <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">Courses</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">Newsletters</a></li>
+                  <li><a href="#" class="nav-link px-2 text-secondary"><span class="fa-solid fa-house-chimney"></span>Home</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">Learning Paths</a></li>
+                  <li><a href="#" class="nav-link px-2 text-dark">Course</a></li>
                   <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li>
                   <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
                 </ul>
@@ -41,48 +41,46 @@
               </div>
             </div>
           </header>
-<!--
-          <div class="b-example-divider"></div> -->
 
           <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
-                <img src="images/bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                <img src="images/dewi.png" class="d-block mx-lg-auto img-fluid" alt="Dewi's Photo" width="700" height="500">
               </div>
               <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
-                <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <h1 class="display-5 fw-bold lh-1 mb-3">Hello, world!</h1>
+                <p class="lead">As a vocational high shcool teacher, I focus in software and game development using Laravel, ReactJs, Android Studio, and Unity. I've mastered in Software Engineering of Tenth November Institute of Technology, and currently a student of CS50, Harvard University’s introduction to the intellectual enterprises of computer science and the art of programming, for concentrators and non-concentrators alike, with or without prior programming experience. My students take different learning path during the three years course. This website is used as a starting point for students to get to know more about me, and explore the learning paths offered in my class. Students must also take at least one optional course during their second year. </p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">View Learning Paths</button>
+                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">Email Me</button>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="b-example-divider"></div>
+          <div class="divider1"></div>
 
           <div class="px-4 pt-5 my-5 text-center border-bottom">
-            <h1 class="display-4 fw-bold">Centered screenshot</h1>
+            <h1 class="display-4 fw-bold">Courses</h1>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+              <p class="lead mb-4">Each learning path has several mandatory courses and optional ones. To </p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+                <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">View Courses</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4">FAQs</button>
               </div>
             </div>
-            <div class="overflow-hidden" style="max-height: 30vh;">
+            <div class="overflow-hidden" style="max-height: 29vh;">
               <div class="container px-5">
-                <img src="images/bootstrap-docs.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+                <img src="images/banner.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="section-banner" width="700" height="500">
               </div>
             </div>
           </div>
 
-          <div class="b-example-divider"></div>
+          <div class="divider1"></div>
 
           <div class="p-4">
             <h2 class="text-center">
-              Limited Offers!!
+              Top Optional Courses
             </h2>
           </div>
 
@@ -92,7 +90,7 @@
                 <div class="card" style="width: 18rem;">
                   <img src="..." class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Internet of Things</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
@@ -102,7 +100,7 @@
                 <div class="card" style="width: 18rem;">
                   <img src="..." class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Data Science</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
@@ -112,7 +110,7 @@
                 <div class="card" style="width: 18rem;">
                   <img src="..." class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Content Managemen System</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
@@ -122,7 +120,7 @@
             <div class="spacing p-4"></div>
           </div>
 
-          <!-- <div class="b-example-divider"></div> -->
+          <!-- <div class="divider1"></div> -->
 
           <div class="container-fluid p-4 bg-dark text-white text-center">
             <footer>
