--- a/problem-sets/homepage/login.html
+++ b/problem-sets/homepage/login.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <div class="container-fluid shadow-lg p-5 text-white bg-dark text-center fs-1">
-            <h1 style="font-family: 'Caveat'" class>B r i g h t    C a m p s</h1>
-            <h6>Brighten up your future with us!</h6>
+            <h1 style="font-family: 'Caveat'" class>Listyanti Dewi Astuti</h1>
+            <h6>Software & Game Development Teacher</h6>
         </div>
         <header class="p-3 text-bg-dark border-bottom">
             <div class="container">
@@ -65,13 +65,13 @@
                   </div>
                   <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
                   <hr class="my-4">
-           
+
                 </form>
               </div>
             </div>
           </div>
 
-          <!-- <div class="b-example-divider"></div> -->
+          <!-- <div class="divider1"></div> -->
 
           <div class="container-fluid p-4 bg-dark text-white text-center">
             <footer>
