--- a/problem-sets/homepage/newsletters.html
+++ b/problem-sets/homepage/newsletters.html
@@ -170,7 +170,7 @@
                 </div>
               </div>
 
-          <!-- <div class="b-example-divider"></div> -->
+          <!-- <div class="divider1"></div> -->
 
           <div class="container-fluid p-4 bg-dark text-white text-center">
             <footer>
