Sun, Jan 29, 2023, 10:57 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="overflow-hidden" style="max-height: 29vh;">
               <div class="container px-5">
-                <img src="images/banner.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="section-banner" width="700" height="500">
+                <img src="images/2.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="section-banner" width="700" height="500">
               </div>
             </div>
           </div>
