Sun, Jan 29, 2023, 11:00 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="overflow-hidden" style="max-height: 29vh;">
               <div class="container px-5">
-                <img src="images/2.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="section-banner" width="700" height="500">
+                <img src="images/2.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="section-banner" width="700" height="500">
               </div>
             </div>
           </div>
@@ -92,17 +92,17 @@
                   <div class="card-body">
                     <h5 class="card-title">Internet of Things</h5>
                     <p class="card-text">Optional for second year students. An introduction to IoT and its applications in industrial world</p>
-                    <a href="#" class="btn btn-primary">Go To Course</a>
+                    <a href="#" class="btn btn-primary">Go to course</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/ds.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Data Science</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">Optional for third year students. An introduction to data science and its application in machine learning</p>
+                    <a href="#" class="btn btn-primary">Go to course</a>
                   </div>
                 </div>
               </div>
