--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -88,7 +88,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="images/iot-1.jpg" class="card-img-top" alt="...">
+                  <img src="images/iot-1.jpg" class="card-img-top" alt="IoT course thumbnail">
                   <div class="card-body">
                     <h5 class="card-title">Internet of Things</h5>
                     <p class="card-text">Optional for second year students. An introduction to IoT and its applications in industrial world</p>
@@ -98,7 +98,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="images/ds.jpg" class="card-img-top" alt="...">
+                  <img src="images/ds.jpg" class="card-img-top" alt="Data Science course thumbnail">
                   <div class="card-body">
                     <h5 class="card-title">Data Science</h5>
                     <p class="card-text">Optional for third year students. An introduction to data science and its application in machine learning</p>
@@ -108,11 +108,11 @@
               </div>
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/cms.jpg" class="card-img-top" alt="CMS course thumbnail">
                   <div class="card-body">
                     <h5 class="card-title">Content Managemen System</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">Optional for second year students. An introduction to CMS using Wordpress, Joomla, and Moodle. </p>
+                    <a href="#" class="btn btn-primary">Go to couse</a>
                   </div>
                 </div>
               </div>
