Sun, Jan 29, 2023, 11:08 PM +07:00

--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -17,16 +17,16 @@
         <header class="p-3 text-bg-dark border-bottom bg-light">
             <div class="container">
               <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
 
                 </a>
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                  <li><a href="#" class="nav-link px-2 text-secondary"><span class="fa-solid fa-house-chimney"></span>Home</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">Learning Paths</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">Course</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
+                  <li><a href="inde.html" class="nav-link px-2 text-secondary"><span class="fa-solid fa-house-chimney"></span>Home</a></li>
+                  <li><a href="learning-path.html" class="nav-link px-2 text-dark">Learning Paths</a></li>
+                  <li><a href="courses.html" class="nav-link px-2 text-dark">Course</a></li>
+                  <li><a href="faq.html" class="nav-link px-2 text-dark">FAQs</a></li>
+                  <li><a href="newsletters.html" class="nav-link px-2 text-dark">Newsletters</a></li>
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
