Sun, Jan 29, 2023, 11:10 PM +07:00

--- a/problem-sets/homepage/courses.html
+++ b/problem-sets/homepage/courses.html
@@ -7,39 +7,40 @@
         <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
         <link href="styles.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/687309d161.js" crossorigin="anonymous"></script>
-        <title>Bright Camps - Home</title>
+        <title>Courses</title>
     </head>
     <body>
-        <div class="container-fluid shadow-lg p-5 text-white bg-dark text-center fs-1">
-            <h1 style="font-family: 'Caveat'" class>B r i g h t    C a m p s</h1>
-            <h6>Brighten up your future with us!</h6>
-        </div>
-        <header class="p-3 text-bg-dark border-bottom">
-            <div class="container">
-              <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                  <span><i></i></span>
-                </a>
+      <div class="container-fluid shadow-lg p-5 text-white text-center fs-1 bg-img">
+        <h1 class="text-big" style="font-family: 'Caveat'" class>Listyanti Dewi Astuti</h1>
+        <h6>Software & Game Development Teacher</h6>
+    </div>
+    <header class="p-3 text-bg-dark border-bottom bg-light">
+        <div class="container">
+          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
 
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                  <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">Courses</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">Newsletters</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">FAQs</a></li>
-                  <li><a href="#" class="nav-link px-2 text-dark">About</a></li>
-                </ul>
+            </a>
 
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                  <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
-                </form>
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+              <li><a href="inde.html" class="nav-link px-2 text-secondary"><span class="fa-solid fa-house-chimney"></span>Home</a></li>
+              <li><a href="learning-path.html" class="nav-link px-2 text-dark">Learning Paths</a></li>
+              <li><a href="courses.html" class="nav-link px-2 text-dark">Course</a></li>
+              <li><a href="faq.html" class="nav-link px-2 text-dark">FAQs</a></li>
+              <li><a href="newsletters.html" class="nav-link px-2 text-dark">Newsletters</a></li>
+            </ul>
 
-                <div class="text-end">
-                  <button type="button" class="btn btn-outline-dark me-2">Login</button>
-                  <a href="signup.html"><button type="button" class="btn btn-warning">Sign-up</button></a>
-                </div>
-              </div>
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+              <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
+            </form>
+
+            <div class="text-end">
+              <a href="login.html"><button type="button" class="btn btn-outline-dark me-2">Login</button></a>
+              <a href="signup.html"><button type="button" class="btn btn-warning">Sign-up</button></a>
+
             </div>
-          </header>
+          </div>
+        </div>
+      </header>
 
 
           <div class="container">
