--- a/problem-sets/homepage/index.html
+++ b/problem-sets/homepage/index.html
@@ -7,7 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
         <link href="styles.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/687309d161.js" crossorigin="anonymous"></script>
-        <title>Bright Camps - Home</title>
+        <title>Home</title>
     </head>
     <body>
         <div class="container-fluid shadow-lg p-5 text-white text-center fs-1 bg-img">
