--- a/problem-sets/homepage/courses.html
+++ b/problem-sets/homepage/courses.html
@@ -41,15 +41,17 @@
           </div>
         </div>
       </header>
-
+      <div class="container-fluid">
+        <h1 class="text-big">Available Courses</h1>
+      </div>
 
           <div class="container">
             <div class="row">
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/laravel-logo.png" class="card-img-top" alt="Laravel Course Thumbnail">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Laravel 9.0</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
