Sun, Jan 29, 2023, 11:17 PM +07:00

--- a/problem-sets/homepage/courses.html
+++ b/problem-sets/homepage/courses.html
@@ -41,7 +41,7 @@
           </div>
         </div>
       </header>
-      <div class="container-fluid">
+      <div class="container-fluid p-3 text-center">
         <h1 class="text-big">Available Courses</h1>
       </div>
 
@@ -49,20 +49,21 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="images/laravel-logo.png" class="card-img-top" alt="Laravel Course Thumbnail">
+                  <img src="images/laravel9.jpg" class="card-img-top card-size" alt="Laravel Course Thumbnail">
                   <div class="card-body">
                     <h5 class="card-title">Laravel 9.0</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <p class="card-text">Laravel course for backend web development second year</p>
+                    <a href="#" class="btn btn-primary">Go to course</a>
                   </div>
                 </div>
               </div>
+
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
                   <img src="..." class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">ReactJs</h5>
+                    <p class="card-text">ReactJs course for frontend web development second year</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                   </div>
                 </div>
