Sun, Jan 29, 2023, 11:20 PM +07:00

--- a/problem-sets/homepage/courses.html
+++ b/problem-sets/homepage/courses.html
@@ -49,7 +49,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="images/laravel9.jpg" class="card-img-top card-size" alt="Laravel Course Thumbnail">
+                  <img src="images/laravel9.jpg" class="card-size card-img-top" alt="Laravel Course Thumbnail">
                   <div class="card-body">
                     <h5 class="card-title">Laravel 9.0</h5>
                     <p class="card-text">Laravel course for backend web development second year</p>
@@ -60,7 +60,7 @@
 
               <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="images/reactjs.png" class="card-size card-img-top" alt="ReactJS Course Thumbnail">
                   <div class="card-body">
                     <h5 class="card-title">ReactJs</h5>
                     <p class="card-text">ReactJs course for frontend web development second year</p>
